# lv_egl_drm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lv_conf_2d.defaults  lv_conf_3d.defaults
boards/resources/board/raspberrypi3-64/: config_3_64bit.txt
boards/resources/configs/: raspberrypi3b-plus_drm_egl_cpp_defconfig
rpi/configs/: raspberrypi3b-plus_drm_egl_defconfig
rpi/resources/board/rootfs_overlay/etc/profile.d/: mesa.sh
src/: main.c  mouse_cursor_icon.c
